--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <table>
                 <tr>
                     <th>Product</th>
-                    <td>Pp Mat</td>
+                    <td>PP Mat</td>
                 </tr>
                 <tr>
                     <th>Product Code</th>
@@ -178,15 +178,15 @@
                     <td>0.195</td>
                 </tr>
                 <tr>
-                    <th>20 Ft Container Carton Quantity</th>
+                    <th>20 Ft Container Quantity</th>
                     <td>2288</td>
                 </tr>
                 <tr>
-                    <th>40 Ft Container Carton Quantity</th>
+                    <th>40 Ft Container Quantity</th>
                     <td>4912</td>
                 </tr>
                 <tr>
-                    <th>40 HQ Container Carton Quantity</th>
+                    <th>40 HQ Container Quantity</th>
                     <td>5568</td>
                 </tr>
                 <tr>
@@ -199,7 +199,7 @@
                 </tr>
                 <tr>
                     <th>Other Details </th>
-                    <td>Carton Box, Hangtag</td>
+                    <td>Carton Box, Hangtag 400 GSM</td>
                 </tr>
             </table>
         </div>
